--- a/Praktikum W14.ipynb
+++ b/Praktikum W14.ipynb
@@ -153,7 +153,7 @@
     "![minato9resize.jpeg](attachment:minato9resize.jpeg)\n",
     "![minato10resize.jpeg](attachment:minato10resize.jpeg)\n",
     "\n",
-    "Dapat terlihat, bahwasanya hasilnya tidak ada yang berubah, dikarenakan memang saya tidak melakukan perubahan apapun pada data.\n",
+    "Dapat terlihat, bahwasanya hasilnya tidak ada yang berubah, dikarenakan memang saya tidak melakukan perubahan apapun pada data, apabila telah melakukan perubahan pada gamabr, dan ingin menyimpannya, maka dapat menggunakan syntax imwrite.\n",
     "    </p>\n",
     "<div>"
    ]
